src/assets/css/wish.css
/**
 * Details
 */
.ui.modal.wish-details.overlay.fullscreen {
    display: flex !important;
    flex-direction: column;
    justify-content: space-between;

    height: 100%;
}
.ui.modal.wish-details.overlay.fullscreen > .content.content.content {
    min-height: 0;
    margin-bottom: auto;
}

/** Image */
.ui.modal.wish-details .wish-image,
.ui.modal.wish-details .wish-image is:(img, svg) {
    height: auto;

    max-width: 100%;
    max-height: 40vh;
}
@media (min-width: 768px) {
    .ui.modal.wish-details .wish-image {
        max-width: 40%;
        max-height: 100%;
    }
}
@media (prefers-color-scheme: dark) {
    .ui.modal.wish-details .wish-image {
        filter: brightness(80%);
    }
}

@supports selector(.ui.modal.wish-details .wish-image:has(.ui.placeholder)) {
    .ui.modal.wish-details .wish-image:has(.ui.placeholder) {
        height: 40vh;
    }
    @media (min-width: 768px) {
        .ui.modal.wish-details .wish-image:has(.ui.placeholder) {
            width: 40%;
        }
    }
}

/** Placeholder */
.ui.modal.wish-details .wish-image .ui.placeholder {
    height: 100%;
}

/** Description */
.ui.modal.wish-details .wish-image:has(.ui.placeholder) + .description {
    padding-left: 2em;
}

/** Actions */
.ui.modal.wish-details > .actions {
    display: flex;
    flex-flow: row wrap;
    gap: 0.25em;
    padding: 1rem !important;
}

.ui.modal.wish-details > .actions .button {
    margin: 0;
    flex: 1 1 auto;
}
@media (max-width: 1023.9px) {
    .ui.modal.wish-details > .actions .button {
        padding: 0.78571429em !important;
    }
}
@media (min-width: 1024px) {
    .ui.modal.wish-details > .actions .button {
        flex: 0 1 auto;
    }
}

.ui.modal.wish-details > .actions .button i {
    display: contents;
}
@media (min-width: 768px) {
    .ui.modal.wish-details > .actions .button i {
        display: none;
    }
}
@media (min-width: 1024px) {
    .ui.modal.wish-details > .actions .button i {
        display: inline;
    }
}

.ui.modal.wish-details > .actions .button span {
    display: none;
}
@media (min-width: 768px) {
    .ui.modal.wish-details > .actions .button span {
        display: inline;
    }
}

